SQL query rewritter for columnar database

--- a/grill-driver-jdbc/pom.xml
+++ b/grill-driver-jdbc/pom.xml
@@ -2,6 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 	<name>Grill Driver for JDBC</name>
+
   <parent>
     <artifactId>grill-parent</artifactId>
     <groupId>com.inmobi.grill</groupId>
@@ -10,7 +11,6 @@
     
   <artifactId>grill-driver-jdbc</artifactId>
   <packaging>jar</packaging>
-  <description> JDBC execution driver </description>
 
   <dependencies>   
 	  <dependency>
@@ -44,5 +44,11 @@
 			<artifactId>hsqldb</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+        <groupId>org.apache.hive</groupId>
+        <artifactId>hive-exec</artifactId>
+        <version>${hive.version}</version>
+     	 </dependency>
+      
   </dependencies>
 </project>    
