--- a/grill-driver-jdbc/pom.xml
+++ b/grill-driver-jdbc/pom.xml
@@ -42,7 +42,6 @@
 		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
-			<scope>test</scope>
 		</dependency>
 		<dependency>
           		<groupId>org.apache.hive</groupId>
@@ -54,5 +53,9 @@
 			<version>1.4.177</version>
 			<scope>test</scope>
 		</dependency>
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+    </dependency>
   </dependencies>
 </project>    
