--- a/grill-examples/pom.xml
+++ b/grill-examples/pom.xml
@@ -30,6 +30,11 @@
         <artifactId>commons-lang</artifactId>
       </dependency>
 
+    <dependency>
+      <groupId>org.hsqldb</groupId>
+      <artifactId>hsqldb</artifactId>
+    </dependency>
+
   </dependencies>
 
 </project>    
