Add spark dependency and reformat pom.xml for readability

--- a/grill-server/pom.xml
+++ b/grill-server/pom.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-		<name>Grill Server</name>
+    <name>Grill Server</name>
 
     <parent>
         <artifactId>grill-parent</artifactId>
@@ -9,14 +10,14 @@
         <version>1.1.0-SNAPSHOT</version>
     </parent>
 
-  <properties>
-   <mvn.classpath.file>${pom.basedir}/target/classpath</mvn.classpath.file>
-  </properties>
+    <properties>
+        <mvn.classpath.file>${pom.basedir}/target/classpath</mvn.classpath.file>
+    </properties>
 
 
     <artifactId>grill-server</artifactId>
     <packaging>war</packaging>
-    <description> Grill server</description>
+    <description>Grill server</description>
 
     <dependencies>
         <dependency>
@@ -45,32 +46,32 @@
             <artifactId>jersey-media-moxy</artifactId>
         </dependency>
         <dependency>
-        <groupId>com.inmobi.grill</groupId>
-        <artifactId>grill-driver-cube</artifactId>
-        <version>${project.version}</version>
+            <groupId>com.inmobi.grill</groupId>
+            <artifactId>grill-driver-cube</artifactId>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
-        <groupId>com.inmobi.grill</groupId>
-        <artifactId>grill-driver-hive</artifactId>
-        <version>${project.version}</version>
+            <groupId>com.inmobi.grill</groupId>
+            <artifactId>grill-driver-hive</artifactId>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
-        <groupId>com.inmobi.grill</groupId>
-        <artifactId>grill-driver-hive</artifactId>
-        <version>${project.version}</version>
-        <type>test-jar</type>
-        <scope>test</scope>
+            <groupId>com.inmobi.grill</groupId>
+            <artifactId>grill-driver-hive</artifactId>
+            <version>${project.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
         </dependency>
-    <dependency>
-       <groupId>org.glassfish.jersey.test-framework.providers</groupId>
-       <artifactId>jersey-test-framework-provider-grizzly2</artifactId>
-     </dependency>
-     <dependency>
-        <groupId>org.glassfish.jersey.test-framework</groupId>
-        <artifactId>jersey-test-framework-core</artifactId>
-      </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.test-framework.providers</groupId>
+            <artifactId>jersey-test-framework-provider-grizzly2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.test-framework</groupId>
+            <artifactId>jersey-test-framework-core</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -86,14 +87,14 @@
             <artifactId>jersey-media-multipart</artifactId>
         </dependency>
         <dependency>
-           <groupId>org.glassfish.jersey.media</groupId>
-           <artifactId>jersey-media-json-jackson</artifactId>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-json-jackson</artifactId>
         </dependency>
-            <dependency>
-                <groupId>javax.xml.bind</groupId>
-                <artifactId>jaxb-api</artifactId>
-            </dependency>
-        
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.glassfish.grizzly</groupId>
             <artifactId>grizzly-framework</artifactId>
@@ -116,31 +117,41 @@
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
         </dependency>
-        
+
         <dependency>
-	        <groupId>com.codahale.metrics</groupId>
-	        <artifactId>metrics-core</artifactId>
-    		</dependency>
+            <groupId>com.codahale.metrics</groupId>
+            <artifactId>metrics-core</artifactId>
+        </dependency>
         <dependency>
-	        <groupId>com.codahale.metrics</groupId>
-	        <artifactId>metrics-ganglia</artifactId>
-    		</dependency>
+            <groupId>com.codahale.metrics</groupId>
+            <artifactId>metrics-ganglia</artifactId>
+        </dependency>
         <dependency>
-	        <groupId>com.codahale.metrics</groupId>
-	        <artifactId>metrics-jvm</artifactId>
-    		</dependency>
+            <groupId>com.codahale.metrics</groupId>
+            <artifactId>metrics-jvm</artifactId>
+        </dependency>
         <dependency>
-	        <groupId>com.codahale.metrics</groupId>
-	        <artifactId>metrics-servlets</artifactId>
-    		</dependency>
+            <groupId>com.codahale.metrics</groupId>
+            <artifactId>metrics-servlets</artifactId>
+        </dependency>
         <dependency>
-	        <groupId>org.slf4j</groupId>
-	        <artifactId>jul-to-slf4j</artifactId>
-    		</dependency>
-      <dependency>
-       <groupId>org.slf4j</groupId>
-       <artifactId>slf4j-log4j12</artifactId>
-      </dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jul-to-slf4j</artifactId>
+        </dependency>
+        <dependency>
+
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+        </dependency>
+
+        <dependency> <!-- Spark dependency -->
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-core_2.10</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-mllib_2.10</artifactId>
+        </dependency>
 
     </dependencies>
 
@@ -153,24 +164,24 @@
                     <attachClasses>true</attachClasses>
                 </configuration>
             </plugin>
-          <plugin>
-            <!-- build the test JAR (test classes) -->
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-jar-plugin</artifactId>
-            <version>2.4</version>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>test-jar</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
+            <plugin>
+                <!-- build the test JAR (test classes) -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>test-jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.mortbay.jetty</groupId>
                 <artifactId>maven-jetty-plugin</artifactId>
                 <version>${jetty.version}</version>
-          </plugin>
+            </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
@@ -190,7 +201,7 @@
                     <environmentVariables>
                         <MVN_CLASSPATH_FILE>${mvn.classpath.file}</MVN_CLASSPATH_FILE>
                     </environmentVariables>
-                   <argLine>-Xms256m -Xmx512m</argLine>
+                    <argLine>-Xms256m -Xmx512m</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -211,21 +222,21 @@
                 </executions>
             </plugin>
 
-					<plugin>
-						<groupId>org.codehaus.enunciate</groupId>
-						<artifactId>maven-enunciate-plugin</artifactId>
-						<version>1.25</version>
-						<executions>
-							<execution>
-								<goals>
-									<goal>docs</goal>
-								</goals>
-							</execution>
-						</executions>
-						<configuration>
-							<configFile>enunciate.xml</configFile>
-						</configuration>
-				</plugin>
+            <plugin>
+                <groupId>org.codehaus.enunciate</groupId>
+                <artifactId>maven-enunciate-plugin</artifactId>
+                <version>1.25</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>docs</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <configFile>enunciate.xml</configFile>
+                </configuration>
+            </plugin>
 
         </plugins>
     </build>
