--- a/grill-server/pom.xml
+++ b/grill-server/pom.xml
@@ -201,7 +201,7 @@
                     <environmentVariables>
                         <MVN_CLASSPATH_FILE>${mvn.classpath.file}</MVN_CLASSPATH_FILE>
                     </environmentVariables>
-                    <argLine>-Xms256m -Xmx512m</argLine>
+                    <!--argLine>-Xms256m -Xmx512m</argLine-->
                 </configuration>
             </plugin>
             <plugin>
