--- a/grill-server/pom.xml
+++ b/grill-server/pom.xml
@@ -153,6 +153,11 @@
             <artifactId>spark-mllib_2.10</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.hive.hcatalog</groupId>
+            <artifactId>hive-hcatalog-core</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
