Create ML Lib module 1. Cleaned lot of Hadoop, Hive and Spark dependencies 2. Change server script to load Hadoop, Spark and Hive dependencies 3. Add jars to spark context in spark driver 4. Split spark code into separate module so that the jar file can be added to spark context 5. Tested model creation on pseudo distributed setup (Grill + HDFS2 + Yarn + HS2 + Metastore Service)

--- a/grill-dist/pom.xml
+++ b/grill-dist/pom.xml
@@ -24,6 +24,11 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+          <groupId>com.inmobi.grill</groupId>
+          <artifactId>grill-spark-lib</artifactId>
+          <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>com.inmobi.grill</groupId>
       <artifactId>grill-driver-hive</artifactId>
       <version>${project.version}</version>
