--- a/grill-client/pom.xml
+++ b/grill-client/pom.xml
@@ -66,7 +66,7 @@
     </dependency>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-core</artifactId>
+      <artifactId>hadoop-common</artifactId>
       <exclusions>
         <exclusion>
            <groupId>commons-io</groupId>
