--- a/grill-driver-cube/pom.xml
+++ b/grill-driver-cube/pom.xml
@@ -22,7 +22,7 @@
 
     <dependency>
       <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-core</artifactId>
+      <artifactId>hadoop-common</artifactId>
     </dependency>
         
       <dependency>
