--- a/grill-driver-hive/pom.xml
+++ b/grill-driver-hive/pom.xml
@@ -61,7 +61,7 @@
     </dependency>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-core</artifactId>
+      <artifactId>hadoop-common</artifactId>
     </dependency>
     <dependency>
       <groupId>org.apache.hive</groupId>
@@ -91,10 +91,12 @@
       <dependency>
           <groupId>org.testng</groupId>
           <artifactId>testng</artifactId>
+          <scope>test</scope>
       </dependency>
-      <dependency>
+      <!--dependency>
           <groupId>org.apache.hadoop</groupId>
           <artifactId>hadoop-test</artifactId>
-      </dependency>
+          <scope>test</scope>
+      </dependency-->
   </dependencies>
 </project>    
