--- a/grill-driver-impala/pom.xml
+++ b/grill-driver-impala/pom.xml
@@ -52,7 +52,7 @@
       </dependency>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-core</artifactId>
+      <artifactId>hadoop-common</artifactId>
     </dependency>
 
     </dependencies>
