--- a/grill-driver-jdbc/pom.xml
+++ b/grill-driver-jdbc/pom.xml
@@ -28,7 +28,7 @@
     </dependency>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-core</artifactId>
+      <artifactId>hadoop-common</artifactId>
     </dependency>
 		<dependency>
 			<groupId>c3p0</groupId>
