--- a/grill-server/pom.xml
+++ b/grill-server/pom.xml
@@ -26,8 +26,13 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.inmobi.grill</groupId>
+            <artifactId>grill-spark-lib</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-core</artifactId>
+            <artifactId>hadoop-common</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.hive</groupId>
@@ -156,6 +161,10 @@
         <dependency>
             <groupId>org.apache.hive.hcatalog</groupId>
             <artifactId>hive-hcatalog-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
         </dependency>
 
     </dependencies>
