--- a/grill-storage-db/pom.xml
+++ b/grill-storage-db/pom.xml
@@ -21,7 +21,12 @@
     </dependency>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-core</artifactId>
+      <artifactId>hadoop-common</artifactId>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.hadoop</groupId>
+          <artifactId>hadoop-mapreduce-client-core</artifactId>
+          <scope>provided</scope>
       </dependency>
     <dependency>
       <groupId>org.apache.hive</groupId>
