--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <powermock.version>1.4.12</powermock.version>
         <hive.version>0.13.1-inm-SNAPSHOT</hive.version>
-        <hadoop.version>0.20.2-cdh3u5</hadoop.version>
+        <hadoop.version>2.4.0</hadoop.version>
         <jetty.version>6.1.26</jetty.version>
         <jersey.version>2.3.1</jersey.version>
         <grizzly.version>2.3.6</grizzly.version>
@@ -347,7 +347,7 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.hadoop</groupId>
-                <artifactId>hadoop-core</artifactId>
+                <artifactId>hadoop-common</artifactId>
                 <version>${hadoop.version}</version>
                 <!-- <scope>provided</scope> -->
                 <exclusions>
@@ -502,11 +502,11 @@
                 <version>${hive.version}</version>
             </dependency>
 
-            <dependency>
+            <!--dependency>
                 <groupId>com.google.protobuf</groupId>
                 <artifactId>protobuf-java</artifactId>
-                <version>2.4.1</version>
-            </dependency>
+                <version>2.5.0</version>
+            </dependency-->
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
@@ -694,11 +694,19 @@
                 <groupId>org.apache.spark</groupId>
                 <artifactId>spark-core_2.10</artifactId>
                 <version>${sparkVersion}</version>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.apache.spark</groupId>
                 <artifactId>spark-mllib_2.10</artifactId>
                 <version>${sparkVersion}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.hadoop</groupId>
+                <artifactId>hadoop-mapreduce-client-core</artifactId>
+                <scope>provided</scope>
+                <version>${hadoop.version}</version>
             </dependency>
 
         </dependencies>
@@ -731,6 +739,7 @@
         <module>grill-driver-hive</module>
         <module>grill-driver-impala</module>
         <module>grill-driver-jdbc</module>
+        <module>grill-spark-lib</module>
         <module>grill-server</module>
         <module>grill-client</module>
         <module>grill-cli</module>
