Fixed concurrent test failure because of jdbc integration tests

--- a/grill-server/pom.xml
+++ b/grill-server/pom.xml
@@ -66,6 +66,7 @@
             <groupId>com.inmobi.grill</groupId>
             <artifactId>grill-driver-jdbc</artifactId>
             <version>${project.version}</version>
+            <scope>test</scope>
         </dependency>
         
         <dependency>
