--- a/grill-server/pom.xml
+++ b/grill-server/pom.xml
@@ -245,7 +245,19 @@
 						<configuration>
 							<configFile>enunciate.xml</configFile>
 						</configuration>
+                        <dependencies>
+                            <dependency>
+                                <groupId>com.sun</groupId>
+                                <artifactId>tools</artifactId>
+                                <version>${java.version}</version>
+                                <scope>system</scope>
+                                <systemPath>${java.home}/../lib/tools.jar</systemPath>
+                            </dependency>
+                        </dependencies>
 				</plugin>
+
+
+
 
         </plugins>
     </build>
