--- a/grill-server/pom.xml
+++ b/grill-server/pom.xml
@@ -192,6 +192,11 @@
             <artifactId>quartz-jobs</artifactId>
             <version>2.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>1.7.1</version>
+        </dependency>
     </dependencies>
 
     <build>
