--- a/grill-client/pom.xml
+++ b/grill-client/pom.xml
@@ -68,6 +68,10 @@
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-common</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.hive</groupId>
+      <artifactId>hive-shims</artifactId>
+    </dependency>
   </dependencies>
 
 </project>    
