--- a/grill-server/pom.xml
+++ b/grill-server/pom.xml
@@ -181,6 +181,12 @@
         <groupId>org.hsqldb</groupId>
         <artifactId>hsqldb</artifactId>
       </dependency>
+      <dependency>
+        <groupId>javax.mail</groupId>
+        <artifactId>mail</artifactId>
+        <version>1.4</version>
+      </dependency>
+
     </dependencies>
 
     <build>
