--- a/grill-server/pom.xml
+++ b/grill-server/pom.xml
@@ -186,7 +186,11 @@
         <artifactId>mail</artifactId>
         <version>1.4</version>
       </dependency>
-
+      <dependency>
+        <groupId>org.liquibase</groupId>
+        <artifactId>liquibase-maven-plugin</artifactId>
+        <version>3.0.7</version>
+      </dependency>
     </dependencies>
 
     <build>
