--- a/grill-server/pom.xml
+++ b/grill-server/pom.xml
@@ -190,6 +190,7 @@
         <groupId>org.liquibase</groupId>
         <artifactId>liquibase-maven-plugin</artifactId>
         <version>3.0.7</version>
+        <scope>test</scope>
       </dependency>
     </dependencies>
 
