--- a/grill-server/pom.xml
+++ b/grill-server/pom.xml
@@ -192,6 +192,17 @@
         <version>3.0.7</version>
         <scope>test</scope>
       </dependency>
+      <dependency>
+        <groupId>com.novell.ldap</groupId>
+        <artifactId>jldap</artifactId>
+        <version>4.3</version>
+      </dependency>
+      <dependency>
+        <groupId>joda-time</groupId>
+        <artifactId>joda-time</artifactId>
+        <version>2.0</version>
+      </dependency>
+
     </dependencies>
 
     <build>
