Added new module for ML client

--- a/pom.xml
+++ b/pom.xml
@@ -746,6 +746,7 @@
     <module>grill-dist</module>
     <module>grill-client-dist</module>
     <module>grill-ml-lib</module>
+    <module>grill-ml-client</module>
     <module>grill-spark-rdd</module>
   </modules>
 
