--- a/grill-ml-client/pom.xml
+++ b/grill-ml-client/pom.xml
@@ -34,6 +34,10 @@
             <artifactId>testng</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-common</artifactId>
+        </dependency>
     </dependencies>
 
 <build>
