Packaging renaming in all configs and scripts

--- a/tools/conf/server/log4j.properties
+++ b/tools/conf/server/log4j.properties
@@ -4,14 +4,14 @@ grillserver.audit.logger=INFO, CONSOLE
 grillserver.querystatus.logger=INFO, CONSOLE
 
 log4j.rootLogger=${grillserver.root.logger}
-log4j.logger.com.inmobi.grill.server.GrillServer.request=${grillserver.request.logger}
-log4j.additivity.com.inmobi.grill.server.GrillServer.request=false
-log4j.logger.com.inmobi.grill.server.GrillServer.audit=${grillserver.audit.logger}
-log4j.additivity.com.inmobi.grill.server.GrillServer.audit=false
-log4j.logger.com.inmobi.grill.server.query.QueryExecutionServiceImpl$QueryStatusLogger=${grillserver.querystatus.logger}
-log4j.additivity.com.inmobi.grill.server.query.QueryExecutionServiceImpl$QueryStatusLogger=false
-log4j.logger.com.inmobi.grill.server.stats.event.query.QueryExecutionStatistics=DEBUG, QueryExecutionStatistics
-log4j.additivity.com.inmobi.grill.server.stats.event.query.QueryExecutionStatistics=false
+log4j.logger.org.apache.lens.server.GrillServer.request=${grillserver.request.logger}
+log4j.additivity.org.apache.lens.server.GrillServer.request=false
+log4j.logger.org.apache.lens.server.GrillServer.audit=${grillserver.audit.logger}
+log4j.additivity.org.apache.lens.server.GrillServer.audit=false
+log4j.logger.org.apache.lens.server.query.QueryExecutionServiceImpl$QueryStatusLogger=${grillserver.querystatus.logger}
+log4j.additivity.org.apache.lens.server.query.QueryExecutionServiceImpl$QueryStatusLogger=false
+log4j.logger.org.apache.lens.server.stats.event.query.QueryExecutionStatistics=DEBUG, QueryExecutionStatistics
+log4j.additivity.org.apache.lens.server.stats.event.query.QueryExecutionStatistics=false
 
 
 # CONSOLE is set to be a ConsoleAppender.
@@ -63,4 +63,4 @@ log4j.appender.STATUS.MaxBackupIndex=20
 log4j.appender.QueryExecutionStatistics=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.QueryExecutionStatistics.DatePattern='.'yyyy-MM-dd-HH
 log4j.appender.QueryExecutionStatistics.File=${grill.log.dir}/query-stats.log
-log4j.appender.QueryExecutionStatistics.layout=com.inmobi.grill.server.stats.store.log.StatisticsLogLayout
+log4j.appender.QueryExecutionStatistics.layout=org.apache.lens.server.stats.store.log.StatisticsLogLayout
