--- a/lens-cube/pom.xml
+++ b/lens-cube/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
      <modelVersion>4.0.0</modelVersion>
-		 <name>Lens Cube Driver</name>
+		 <name>Lens Cube</name>
    
      <parent>
        <artifactId>lens-parent</artifactId>
@@ -11,7 +11,7 @@
     
     <artifactId>lens-cube</artifactId>
     <packaging>jar</packaging>
-    <description> The driver implementation accepting cube queries</description>
+    <description>OLAP cube queries</description>
 
     <dependencies>
         <dependency>
