minimal changes to make grill/lens work in

--- a/tools/conf/client/log4j.properties
+++ b/tools/conf/client/log4j.properties
@@ -12,7 +12,7 @@ log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
 log4j.appender.R=org.apache.log4j.RollingFileAppender
-log4j.appender.R.File=${grill.log.dir}/grillclient.log
+log4j.appender.R.File=${lens.log.dir}/lensclient.log
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
 log4j.appender.R.layout.ConversionPattern=%d{dd MMM yyyy HH:mm:ss,SSS} [%t] %-5p %c %x - %m%n
 
