--- a/tools/conf/server/log4j.properties
+++ b/tools/conf/server/log4j.properties
@@ -22,7 +22,7 @@ log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
 log4j.appender.ROOT=org.apache.log4j.RollingFileAppender
-log4j.appender.ROOT.File=${grill.log.dir}/grillserver.log
+log4j.appender.ROOT.File=${lens.log.dir}/lensserver.log
 log4j.appender.ROOT.layout=org.apache.log4j.PatternLayout
 log4j.appender.ROOT.layout.ConversionPattern=%d{dd MMM yyyy HH:mm:ss,SSS} [%t] %-5p %c %x - %m%n
 
@@ -32,7 +32,7 @@ log4j.appender.ROOT.MaxBackupIndex=20
 
 
 log4j.appender.AUDIT=org.apache.log4j.RollingFileAppender
-log4j.appender.AUDIT.File=${grill.log.dir}/grillserver-audit.log
+log4j.appender.AUDIT.File=${lens.log.dir}/lensserver-audit.log
 log4j.appender.AUDIT.layout=org.apache.log4j.PatternLayout
 log4j.appender.AUDIT.layout.ConversionPattern=%d{dd MMM yyyy HH:mm:ss,SSS} [%t] %-5p %c %x - %m%n
 
@@ -41,7 +41,7 @@ log4j.appender.AUDIT.MaxFileSize=100000KB
 log4j.appender.AUDIT.MaxBackupIndex=20
 
 log4j.appender.REQUEST=org.apache.log4j.RollingFileAppender
-log4j.appender.REQUEST.File=${grill.log.dir}/grillserver-requests.log
+log4j.appender.REQUEST.File=${lens.log.dir}/lensserver-requests.log
 log4j.appender.REQUEST.layout=org.apache.log4j.PatternLayout
 log4j.appender.REQUEST.layout.ConversionPattern=%d{dd MMM yyyy HH:mm:ss,SSS} [%t] %-5p %c %x - %m%n
 
@@ -50,7 +50,7 @@ log4j.appender.REQUEST.MaxFileSize=100000KB
 log4j.appender.REQUEST.MaxBackupIndex=20
 
 log4j.appender.STATUS=org.apache.log4j.RollingFileAppender
-log4j.appender.STATUS.File=${grill.log.dir}/grillserver-query-status.log
+log4j.appender.STATUS.File=${lens.log.dir}/lensserver-query-status.log
 log4j.appender.STATUS.layout=org.apache.log4j.PatternLayout
 log4j.appender.STATUS.layout.ConversionPattern=%d{dd MMM yyyy HH:mm:ss,SSS} [%t] %-5p %c %x - %m%n
 
@@ -62,5 +62,5 @@ log4j.appender.STATUS.MaxBackupIndex=20
 #Add query statistics logger with hourly rollup
 log4j.appender.QueryExecutionStatistics=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.QueryExecutionStatistics.DatePattern='.'yyyy-MM-dd-HH
-log4j.appender.QueryExecutionStatistics.File=${grill.log.dir}/query-stats.log
+log4j.appender.QueryExecutionStatistics.File=${lens.log.dir}/query-stats.log
 log4j.appender.QueryExecutionStatistics.layout=org.apache.lens.server.stats.store.log.StatisticsLogLayout
