--- a/tools/conf/server/log4j.properties
+++ b/tools/conf/server/log4j.properties
@@ -1,14 +1,14 @@
-grillserver.root.logger=INFO, ROOT
-grillserver.request.logger=INFO, REQUEST
-grillserver.audit.logger=INFO, CONSOLE
-grillserver.querystatus.logger=INFO, CONSOLE
+lensserver.root.logger=INFO, ROOT
+lensserver.request.logger=INFO, REQUEST
+lensserver.audit.logger=INFO, CONSOLE
+lensserver.querystatus.logger=INFO, CONSOLE
 
-log4j.rootLogger=${grillserver.root.logger}
-log4j.logger.org.apache.lens.server.GrillServer.request=${grillserver.request.logger}
+log4j.rootLogger=${lensserver.root.logger}
+log4j.logger.org.apache.lens.server.GrillServer.request=${lensserver.request.logger}
 log4j.additivity.org.apache.lens.server.GrillServer.request=false
-log4j.logger.org.apache.lens.server.GrillServer.audit=${grillserver.audit.logger}
+log4j.logger.org.apache.lens.server.GrillServer.audit=${lensserver.audit.logger}
 log4j.additivity.org.apache.lens.server.GrillServer.audit=false
-log4j.logger.org.apache.lens.server.query.QueryExecutionServiceImpl$QueryStatusLogger=${grillserver.querystatus.logger}
+log4j.logger.org.apache.lens.server.query.QueryExecutionServiceImpl$QueryStatusLogger=${lensserver.querystatus.logger}
 log4j.additivity.org.apache.lens.server.query.QueryExecutionServiceImpl$QueryStatusLogger=false
 log4j.logger.org.apache.lens.server.stats.event.query.QueryExecutionStatistics=DEBUG, QueryExecutionStatistics
 log4j.additivity.org.apache.lens.server.stats.event.query.QueryExecutionStatistics=false
