--- a/pom.xml
+++ b/pom.xml
@@ -686,7 +686,7 @@
        <artifactId>spring-shell</artifactId>
        <version>1.0.0.RELEASE</version>
      </dependency>
-     <!-- HSQLDB Dependency for grill-examples to work -->
+     <!-- HSQLDB Dependency for examples to work -->
      <dependency>
        <groupId>org.hsqldb</groupId>
        <artifactId>hsqldb</artifactId>
